@@ -11,7 +11,7 @@
 
 	NOTE: ancient versions of yacc reject // end-of-line comments
 
-	$Id: hackt-parse.yy.in,v 1.24.6.4 2007/04/11 20:50:07 fang Exp $
+	$Id: hackt-parse.yy.in,v 1.24.6.5 2007/04/26 22:44:26 fang Exp $
 	This file was formerly known as:
 	Id: hackt-parse.yy,v 1.2 2005/11/10 02:13:09 fang Exp
 	Id: art++-parse.yy,v 1.25 2005/07/20 21:00:59 fang Exp
@@ -1928,13 +1928,10 @@ prs_body_item
 	| prs_macro { $$ = $1; }
 	/* extensions requested by Clint for forked tool-chain */
 	| TREE_LANG optional_template_arguments_in_angles '{' prs_body '}'
-		{ DELETE_TOKEN($1); DELETE_TOKEN($2);
-		  DELETE_TOKEN($3); DELETE_TOKEN($4); DELETE_TOKEN($5); 
-		  $$ = NULL; }
+		{ DELETE_TOKEN($2);
+		  WRAP_LIST($3, $4, $5); $$ = new PRS::body($1, $4); }
 	| SUBCKT_LANG '{' prs_body '}'
-		{ DELETE_TOKEN($1); DELETE_TOKEN($2);
-		  DELETE_TOKEN($3); DELETE_TOKEN($4);
-		  $$ = NULL; }
+		{ WRAP_LIST($2, $3, $4); $$ = new PRS::body($1, $3); }
 	;
 
 /* looks like a function call */
