@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2007-04-26	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-16-PRS-07-06:
+	  parser::PRS::body is now a body_item, for prs rule nesting.
+	  HAC::entity::PRS::nested_rules class for convenient nesting.
+		tree and subckt now forward rules to their enclosing 
+		environment, and are treated like normal PRS.  
+
+
 2007-04-18	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-16-PRS-07-05-backport-main-00-81-18:
